fix alignment

--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -67,3 +67,8 @@ a:hover {
   background-color: #FAC33D1f !important;
   background: #FAC33D1f !important;
 }
+
+.btn-topic-play
+{
+  color: #000 !important;
+}
